[FIX] Dockerfile 수정
Updated the ENTRYPOINT to use the new logging format.